--- a/sec27groceryApp/client/view-all-shopping-lists.html
+++ b/sec27groceryApp/client/view-all-shopping-lists.html
@@ -33,17 +33,9 @@
    </div>
  </nav>
    
- <form>
-  <div class="form-group">
-    <label> Name </label>
-    <input type="text" class="form-control" id="nameTextBox" placeholder="Enter name">
-  </div>
-  <div class="form-group">
-    <label>Address</label>
-    <input type="text" class="form-control" id="addressTextBox" placeholder="Enter address"> 
-  </div>
-  <button type="submit" id="saveShoppingListButton" class="btn btn-primary">Save</button>
- </form>
+    <ul class="list-group" id="shoppingListUL">
+      
+    </ul>
  
    </div>
 
@@ -53,6 +45,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
-    <script src="add-shopping-list.js"></script>
+    <script src="view-all-shopping-lists.js"></script>
   </body>
 </html>
