--- a/sec27groceryApp/client/view-shopping-list.html
+++ b/sec27groceryApp/client/view-shopping-list.html
@@ -29,21 +29,16 @@
        <li class="nav-item">
           <a class="nav-link" href="add-grocery-item.html">Add Grocery Item</a>
        </li>
+       <li class="nav-item">
+         <a class="nav-link" href="view-all-shopping-lists.html">View All Shopping Lists</a>
+       </li>
      </ul>
    </div>
  </nav>
-   
- <form>
-  <div class="form-group">
-    <label> Name </label>
-    <input type="text" class="form-control" id="nameTextBox" placeholder="Enter name">
-  </div>
-  <div class="form-group">
-    <label>Address</label>
-    <input type="text" class="form-control" id="addressTextBox" placeholder="Enter address"> 
-  </div>
-  <button type="submit" id="saveShoppingListButton" class="btn btn-primary">Save</button>
- </form>
+    <h1 id="shoppingListTitleHeading"> </h1>   
+    <ul class="list-group" id="groceryItemsUL">
+      
+    </ul>
  
    </div>
 
@@ -53,6 +48,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
-    <script src="add-shopping-list.js"></script>
+    <script src="view-shopping-list.js"></script>
   </body>
 </html>
